MDEV-36830: Oracle outer join syntax (+): outer join not converted to inner

If we create a new Item_cond_and for the WHERE or ON clause, call
top_level_item() for it.